tests/compile_fail/any_struct_field.olrn
struct Box {
    value: any,
}

fn main() -> void
{
    b := Box{.value=42}
    @pl(b.value)
}

